@@ -8,6 +8,7 @@ Version 7.0.1
   - Bugfix in TCPSocket::sslStart: a call to this function does
     not change blocking mode to non-blocking anymore. It keeps
     the previous mode.
+  - random.cpp: removed deprecated keyword "register" (C++17)
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
